deployments/prod/us-east-1/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hola
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hola
  template:
    metadata:
      labels:
        app: hola
    spec:
      serviceAccountName: hola
      securityContext:
        fsGroup: 65534
      containers:
      - name: hola
        image: 612427630422.dkr.ecr.us-east-1.amazonaws.com/sre/hola:9026070b
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 20Mi
        volumeMounts:
        - name: dynamic-config
          mountPath: /opt/hola/
          readOnly: true
      - name: confd
        image: 612427630422.dkr.ecr.us-east-1.amazonaws.com/sre/confd:9026070b
        imagePullPolicy: Always
        command: ["confd"]
        args: ["-backend", "consul", "-node", "http://consul.sre.svc.cluster.local:8500", "-interval", "10", "-watch"]
        volumeMounts:
        - name: dynamic-config
          mountPath: /opt/hola/
      volumes:
        - name: dynamic-config
          emptyDir: {}
---
