deployments/prod/us-east-1/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hola
spec:
  ports:
  - name: http
    targetPort: 5000
    port: 80
  selector:
    app: hola
