deployments/prod/us-east-1/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-k8s
  annotations:
    kubernetes.io/ingress.class: internal-traefik
spec:
  rules:
  - host: hello-k8s-internal.prod-x-default.moengage.com
    http:
      paths:
      - path: /
        backend:
          serviceName: hello-k8s
          servicePort: http
---
